fixed overflow problem

--- a/php/style.css
+++ b/php/style.css
@@ -1,8 +1,11 @@
+html {
+    width: 100vw;
+}
 body {
     background-color: #E1DEDB;
     font-family: 'PT Sans', Arial, sans-serif;
     font-size: 16px;
-    width: 100vw;
+    width: 100%;
     height: 422.5vh;
     margin: 0;
 }
